Problema del Alto Contraste
1. NUEVA PÁGINA: Actualizar Correo
2. ARREGLAR SIDEBAR EN "MI TARJETA"
3. CORRECCIÓN MASIVA DE ALTO CONTRASTE
A. Trámites
B. Menú de Citas
C. Ver Mis Citas
D. Requisitos
4. ARREGLO "CREAR CUENTA" Y NUEVAS IMÁGENES
5. BONUS: IMAGEN NUEVA EN LOGIN

--- a/Edmundo_Proyecto_IHC/06-citas.html
+++ b/Edmundo_Proyecto_IHC/06-citas.html
@@ -3,68 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Citas Médicas</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sidebar.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <style>
-        * { box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Montserrat', sans-serif; background-color: #f5f5f5; height: 100vh; display: flex; }
-        
-        /* SIDEBAR ESTÁNDAR */
-        .sidebar { width: 250px; background-color: #e0e0e0; display: flex; flex-direction: column; padding: 20px; flex-shrink: 0; }
-        .logo-area { display: flex; align-items: center; margin-bottom: 40px; color: #10312B; font-weight: 700; font-size: 20px; }
-        .menu { list-style: none; padding: 0; margin: 0; flex-grow: 1; }
-        .menu li { margin-bottom: 10px; }
-        .menu a { display: flex; align-items: center; text-decoration: none; color: #666; padding: 12px 15px; border-radius: 12px; font-weight: 600; transition: all 0.3s; }
-        .menu a.active { background-color: #006657; color: white; box-shadow: 0 4px 10px rgba(0,102,87,0.2); }
-        .menu a:hover:not(.active) { background-color: #d6d6d6; color: #006657; }
-        .material-icons-round { margin-right: 15px; font-size: 20px; }
-        
-        /* CONTENIDO */
-        .main-content { flex-grow: 1; padding: 30px; overflow-y: auto; }
-        h2 { color: #006657; margin-top: 0; }
-
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
         .card {
-            background: white; padding: 25px; border-radius: 15px; text-decoration: none; color: #333;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.05); border-left: 5px solid #006657; transition: transform 0.2s;
-            display: flex; flex-direction: column; height: 160px; justify-content: space-between;
+            background: var(--card-bg); /* Variable */
+            padding: 25px; border-radius: 15px; text-decoration: none; color: var(--text-color);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05); border-left: 5px solid var(--imss-green); 
+            transition: transform 0.2s; display: flex; flex-direction: column; height: 160px; justify-content: space-between;
         }
         .card:hover { transform: translateY(-5px); }
-        .card h3 { margin: 0; color: #006657; }
-        .card p { font-size: 13px; color: #666; margin: 10px 0; }
-        .icon-big { align-self: flex-end; font-size: 40px; color: #BC955C; margin: 0; }
+        .card h3 { margin: 0; color: var(--imss-green); }
+        .card p { font-size: 13px; opacity: 0.8; margin: 10px 0; }
+        .icon-big { align-self: flex-end; font-size: 40px; color: var(--imss-gold); margin: 0; }
     </style>
 </head>
 <body>
-    <div class="sidebar">
-        <div class="logo-area"><span class="material-icons-round" style="font-size:30px; color:#006657;">health_and_safety</span> AIMSS</div>
-        <ul class="menu">
-            <li><a href="05-inicio.html"><span class="material-icons-round">dashboard</span>Inicio</a></li>
-            <li><a href="06-citas.html" class="active"><span class="material-icons-round">calendar_today</span>Citas</a></li>
-            <li><a href="12-directorio.html"><span class="material-icons-round">medical_services</span>Doctor</a></li>
-            <li><a href="07-vigencia.html"><span class="material-icons-round">verified</span>Vigencia</a></li>
-            <li><a href="09-configuracion.html"><span class="material-icons-round">settings</span>Ajustes</a></li>
-        </ul>
-    </div>
-
-    <div class="main-content">
-        <h2>Gestión de Citas</h2>
-        <p style="color:#666;">Selecciona una opción para gestionar tu atención médica.</p>
-
-        <div class="grid">
-            <a href="06a-agendar.html" class="card">
-                <div><h3>Agendar Nueva Cita</h3><p>Solicita atención en tu UMF o especialidad.</p></div>
-                <span class="material-icons-round icon-big">add_circle</span>
-            </a>
-            <a href="06b-mis-citas.html" class="card" style="border-left-color: #BC955C;">
-                <div><h3>Ver Mis Citas</h3><p>Consulta y administra tus citas programadas.</p></div>
-                <span class="material-icons-round icon-big">event_available</span>
-            </a>
-            <a href="06c-requisitos.html" class="card" style="border-left-color: #9F2241;">
-                <div><h3>Requisitos</h3><p>Documentación necesaria para tu consulta.</p></div>
-                <span class="material-icons-round icon-big">inventory</span>
-            </a>
+    <div class="page-container">
+        <div class="main-content">
+            <header>Gestión de Citas</header>
+            <div class="grid">
+                <a href="06a-agendar.html" class="card">
+                    <div><h3>Agendar Nueva Cita</h3><p>Solicita atención en tu UMF o especialidad.</p></div>
+                    <span class="material-icons-round icon-big">add_circle</span>
+                </a>
+                <a href="06b-mis-citas.html" class="card" style="border-left-color: var(--imss-gold);">
+                    <div><h3>Ver Mis Citas</h3><p>Consulta y administra tus citas programadas.</p></div>
+                    <span class="material-icons-round icon-big">event_available</span>
+                </a>
+                <a href="06c-requisitos.html" class="card" style="border-left-color: var(--imss-red);">
+                    <div><h3>Requisitos</h3><p>Documentación necesaria para tu consulta.</p></div>
+                    <span class="material-icons-round icon-big">inventory</span>
+                </a>
+            </div>
         </div>
     </div>
+    <script src="sidebar.js"></script>
 </body>
 </html>
