--- a/Edmundo_Proyecto_IHC/06c-requisitos.html
+++ b/Edmundo_Proyecto_IHC/06c-requisitos.html
@@ -1,95 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Requisitos para Consulta</title>
+    <meta charset="UTF-8">
+    <title>Requisitos</title>
+    <link rel="stylesheet" href="sidebar.css">
     <style>
-        body {
-            margin: 0;
-            font-family: 'Montserrat', sans-serif;
-            background-color: #f3f8f6;
-        }
-        header {
-            background-color: #006657;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 20px;
-        }
-        .container {
-            padding: 20px;
-            max-width: 650px;
-            margin: auto;
-        }
-        h2 {
-            color: #006657;
-            text-align: center;
-        }
         .req-box {
-            background: white;
-            border-radius: 10px;
-            padding: 15px;
-            margin: 12px 0;
-            box-shadow: 0 0 8px rgba(0,0,0,0.1);
+            background: var(--card-bg);
+            border-radius: 10px; padding: 20px; margin-bottom: 15px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
         }
-        .req-box h3 {
-            margin: 0 0 10px;
-            color: #006657;
-        }
-        ul {
-            margin: 0;
-            padding-left: 20px;
-        }
-        .back {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .back a {
-            color: #006657;
-            text-decoration: none;
-        }
+        .req-box h3 { margin: 0 0 10px; color: var(--imss-green); }
+        ul { padding-left: 20px; color: var(--text-color); }
+        li { margin-bottom: 5px; }
     </style>
 </head>
 <body>
-    <header>Requisitos para Consulta</header>
-
-    <div class="container">
-        <h2>Antes de acudir a tu cita</h2>
-
-        <div class="req-box">
-            <h3>Documentación obligatoria</h3>
-            <ul>
-                <li>Identificación oficial (INE o pasaporte)</li>
-                <li>CURP</li>
-                <li>Número de Seguridad Social</li>
-                <li>Comprobante de cita</li>
-            </ul>
-        </div>
-
-        <div class="req-box">
-            <h3>Recomendaciones generales</h3>
-            <ul>
-                <li>Llega 15 minutos antes de tu horario</li>
-                <li>Acude con cubrebocas si es requerido</li>
-                <li>No olvides tus estudios previos si te los solicitaron</li>
-                <li>Evita acudir acompañado a menos que sea necesario</li>
-            </ul>
-        </div>
-
-        <div class="req-box">
-            <h3>Casos especiales</h3>
-            <ul>
-                <li>Si eres diabético o hipertenso: lleva tu última bitácora médica</li>
-                <li>Si es consulta de nutrición: evita comer 2 horas antes</li>
-                <li>Para odontología: mantén adecuada higiene dental previa</li>
-            </ul>
-        </div>
-
-        <div class="back">
-            <a href="06-citas.html">⬅ Regresar</a>
+    <div class="page-container">
+        <div class="main-content">
+            <header>Requisitos para Consulta</header>
+            <div class="req-box">
+                <h3>Documentación Obligatoria</h3>
+                <ul>
+                    <li>Identificación oficial (INE o Pasaporte)</li>
+                    <li>Cartilla Nacional de Salud</li>
+                    <li>Vigencia de Derechos impresa</li>
+                </ul>
+            </div>
+            <div class="req-box">
+                <h3>Recomendaciones</h3>
+                <ul>
+                    <li>Llegar 15 minutos antes de la cita</li>
+                    <li>Usar cubrebocas en áreas cerradas</li>
+                </ul>
+            </div>
+            <div style="text-align:center; margin-top:20px;">
+                <a href="06-citas.html" style="color:var(--imss-green); text-decoration:none; font-weight:bold;">⬅ Regresar</a>
+            </div>
         </div>
     </div>
-
+    <script src="sidebar.js"></script>
 </body>
 </html>
