--- a/Edmundo_Proyecto_IHC/08a-nss.html
+++ b/Edmundo_Proyecto_IHC/08a-nss.html
@@ -1,118 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Asignación del NSS</title>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #f3f8f6;
-            font-family: 'Montserrat', sans-serif;
-        }
-
-        header {
-            background-color: #006657;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 22px;
-            position: relative;
-        }
-
-        .back-btn {
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-        }
-
-        .container {
-            padding: 20px;
-        }
-
-        .box {
-            background: white;
-            padding: 22px;
-            border-radius: 10px;
-            max-width: 380px;
-            margin: 0 auto;
-            box-shadow: 0 0 8px rgba(0,0,0,0.1);
-        }
-
-        h2 {
-            margin-top: 0;
-            color: #006657;
-            text-align: center;
-        }
-
-        p {
-            color: #444;
-            font-size: 14px;
-            text-align: center;
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-top: 12px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-            font-size: 14px;
-        }
-
-        .button {
-            display: block;
-            margin-top: 18px;
-            background-color: #009879;
-            color: white;
-            text-align: center;
-            padding: 12px;
-            border-radius: 6px;
-            text-decoration: none;
-        }
-        
-        .back {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .back a {
-            color: #006657;
-            text-decoration: none;
-        }
-        
-    </style>
+    <meta charset="UTF-8">
+    <title>Asignación de NSS</title>
+    <link rel="stylesheet" href="sidebar.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
-
 <body>
+    <div class="page-container">
+        <div class="main-content">
+            <header>Trámites Digitales</header>
+            <div class="box-container">
+                <h3>Asignación de NSS</h3>
+                <p>Obtén o localiza tu Número de Seguridad Social único.</p>
 
-    <header>
-        Obtener NSS
-    </header>
+                <label>CURP</label>
+                <input type="text" placeholder="Ingresa tu CURP">
 
-    <div class="container">
+                <label>Correo Electrónico</label>
+                <input type="email" placeholder="Para recibir el documento">
 
-        <div class="box">
-            <h2>Asignación o Localización del NSS</h2>
-            <p>Ingresa tu CURP y correo electrónico para obtener tu número de seguridad social.</p>
-
-            <input type="text" placeholder="CURP" />
-            <input type="email" placeholder="Correo electrónico" />
-
-            <a href="08a-nss-prev.html" class="button">Previsualizar</a>
+                <a href="08a-nss-prev.html" class="button">Continuar</a>
+            </div>
+            <div class="back"><a href="08-otros.html">⬅ Regresar a Trámites</a></div>
         </div>
-
-        <div class="back">
-            <a href="08-otros.html">⬅ Regresar</a>
-        </div>
-
     </div>
-
+    <script src="sidebar.js"></script>
 </body>
 </html>
