--- a/Edmundo_Proyecto_IHC/08f-beneficiarios.html
+++ b/Edmundo_Proyecto_IHC/08f-beneficiarios.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
     <title>Registro de Beneficiarios</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        * { box-sizing: border-box; }
-        body { background-color: #f3f8f6; font-family: 'Montserrat', sans-serif; margin: 0; }
-        header { background-color: #006657; color: white; padding: 15px; text-align: center; font-weight: 700; }
-        .box-container { max-width: 450px; margin: 40px auto; background: white; padding: 25px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        label { color: #006657; font-weight: bold; display: block; margin-bottom: 5px; }
-        input, select { width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc; font-family: 'Montserrat', sans-serif; }
-        .button { width: 100%; display: block; text-align: center; padding: 12px 0; background-color: #009879; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; }
-        .back { text-align: center; margin-top: 20px; }
-        .back a { color: #006657; text-decoration: none; }
-    </style>
+    <link rel="stylesheet" href="sidebar.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 <body>
-    <header>Alta de Beneficiarios</header>
-    <div class="box-container">
-        <p style="color:#666; font-size:14px;">Registra a tu esposa(o), concubina(o), padres o hijos.</p>
+    <div class="page-container">
+        <div class="main-content">
+            <header>Trámites Digitales</header>
+            <div class="box-container">
+                <h3>Alta de Beneficiarios</h3>
+                <p>Registra a tus familiares para que reciban atención médica.</p>
 
-        <label>Parentesco</label>
-        <select>
-            <option>Esposa / Esposo</option>
-            <option>Hijo / Hija</option>
-            <option>Padre / Madre</option>
-            <option>Concubina / Concubinario</option>
-        </select>
+                <label>Parentesco</label>
+                <select>
+                    <option>Esposa / Esposo</option>
+                    <option>Hijo / Hija</option>
+                    <option>Padre / Madre</option>
+                    <option>Concubina / Concubinario</option>
+                </select>
 
-        <label>CURP del Beneficiario</label>
-        <input type="text" placeholder="CURP del familiar" />
+                <label>CURP del Beneficiario</label>
+                <input type="text" placeholder="Ingresa la CURP del familiar">
 
-        <label>Nombre Completo</label>
-        <input type="text" placeholder="Nombre(s) y Apellidos" />
+                <label>Nombre Completo</label>
+                <input type="text" placeholder="Nombre(s) y Apellidos">
 
-        <a href="#" class="button" onclick="alert('Beneficiario registrado exitosamente.')">Registrar</a>
+                <button onclick="alert('Beneficiario registrado exitosamente.')">Registrar</button>
+            </div>
+            <div class="back"><a href="08-otros.html">⬅ Regresar a Trámites</a></div>
+        </div>
     </div>
-    <div class="back"><a href="08-otros.html">⬅ Regresar</a></div>
+    <script src="sidebar.js"></script>
 </body>
 </html>
